--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pod-install": "cd ios && bundle exec pod install"
   },
   "dependencies": {
+    "@anatolyk/react-native-week-view": "^1.0.8",
     "@d11/react-native-fast-image": "^8.11.1",
     "@formatjs/intl-datetimeformat": "^6.16.5",
     "@formatjs/intl-getcanonicallocales": "^2.5.3",
@@ -86,6 +87,7 @@
     "react-native-override-color-scheme": "^2.0.0",
     "react-native-pager-view": "^6.8.1",
     "react-native-path": "^0.0.5",
+    "react-native-pdf": "^6.7.7",
     "react-native-pdf-light": "^2.4.2",
     "react-native-permissions": "^5.4.2",
     "react-native-progress": "^5.0.1",
@@ -98,6 +100,7 @@
     "react-native-tab-view": "^4.1.2",
     "react-native-uuid": "^2.0.3",
     "react-native-video": "^6.16.1",
+    "react-native-week-view": "^0.30.0",
     "react-string-replace": "^1.1.1",
     "react-usestateref": "^1.0.9",
     "reanimated-color-picker": "^4.0.1",
